--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body    {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 .header {
     background: #1F2937;
     color: white;
@@ -18,7 +24,7 @@ ul  {
     list-style: none;
     padding: 8px;
     margin: 20px;
-    gap: 16px;
+    gap: 32px;
 }
 
 a   {
@@ -29,13 +35,16 @@ a   {
 }
 
 .aheader {
+    margin-top: 20px;
     display: flex;
     background: #1F2937;
-    margin: -20px;
+    margin-left: -10px;
+    margin-right: -10px;
     color: white;
-    height: 300px;
+    height: 320px;
     justify-content: space-around;
     align-items: center;
+  
 }
 
 .box {
@@ -52,16 +61,134 @@ a   {
 
 .sign   {
     height: 30px;
-    width: 80px;
+    width: 90px;
+    margin-top: 8px;
+    background: #3882F6;
+    color: white;
+    border-radius: 8px;
+    border-color: white;
 
 }
 
 .img    {
     display: flex;
     background: rgb(117, 117, 117);
-    height: 150px;
+    height: 185px;
     width: 350px;
     margin-top: 26px;
     justify-content: center;
     align-items: center;
+    border-radius: 16px;
 }
+
+.textt  {
+ text-align: center;
+ margin: 25px;
+ font-size: 32px;
+ font-weight: 900;
+}
+
+.container  {
+    display: flex;
+    gap: 32px;
+    height: 120px;
+    justify-content: center;
+    align-items: center;
+}
+
+.card   {
+    background: rgb(145, 129, 129);
+    height: 100px;
+    width: 100px;
+    border-radius: 16px;
+    border-color: #3882F6;
+    
+}
+
+.info   {
+  display: flex;
+  flex-direction: column;
+  max-width: 100px;
+  align-items: center;
+  text-align: center;
+
+}
+
+.review {
+    margin-top: 20px;
+    display: flex;
+    background: #c3c3c3;
+    margin-left: -10px;
+    margin-right: -10px;
+    color: rgb(0, 0, 0);
+    height: 280px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.les    {
+ max-width: 500px;
+ font-size: 24px;
+ font-style: italic;
+}
+
+.potpis {
+    display: flex;
+    align-items: flex-end;
+    margin-top: 40px;
+    margin-left:250px;
+    font-size: 26px;
+    font-weight: 900;
+}
+
+.afooter    {
+    display: flex;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+.boxik  {
+    display: flex;
+    align-items: center;
+    background: #2d6d73;
+    color: white;
+    height: 150px;
+    width: 650px;
+    justify-content: space-between;
+    border-radius: 25px;
+    
+}
+
+.call, .up  {
+    margin: 32px;
+}
+
+.calli  {
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.up {
+    border-radius: 10px;
+    height: 36px;
+    width: 100px;
+    color: white;
+    background: rgb(46,123,182);
+    border-color: white;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #1F2937;
+    font-size: 20px;
+    color: white;
+  }
